fix(client/CallingCard): handle displayName overflow

--- a/client/src/pages/room/components/users/usercard/UserCard.module.css
+++ b/client/src/pages/room/components/users/usercard/UserCard.module.css
@@ -17,6 +17,10 @@
 
 .displayName {
   font-size: 16px;
+  max-width: calc(var(--user-card-width) - 48px); /* subtract horizontal padding */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .audioWavesContainer {
